Update deep-dive_hotspot_stuff.md